# autonomous-mobile-turtlebot-system-ros2-navigation-localization-and-planning

./: .gitmodules  README.md  frames_2026-04-05_06.28.13.gv  my_map.pgm  my_map.yaml
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/irob_assignment_1/lib/irob_assignment_1/: explorer
install/irob_assignment_1/share/irob_assignment_1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/irob_assignment_1/share/irob_assignment_1/config/: navigation.yaml  slam_params.yaml
install/irob_assignment_1/share/irob_assignment_1/launch/: simulator.launch.py
install/irob_assignment_5/lib/irob_assignment_5/: activation_server  at_goal_server  bt_students  explorer  goal_server  sm_students
install/irob_assignment_5/share/irob_assignment_5/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/irob_assignment_5/share/irob_assignment_5/config/: goal_params_SM.yaml  navigation.yaml
install/irob_assignment_5/share/irob_assignment_5/launch/: project_launch.launch.py  simulator.launch.py  start.launch.py
install/irob_interfaces/include/irob_interfaces/irob_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/irob_interfaces/include/irob_interfaces/irob_interfaces/srv/: activate.h  at_goal.h  at_goal.hpp  get_goal.h  get_goal.hpp
install/irob_interfaces/include/irob_interfaces/irob_interfaces/srv/detail/: activate__rosidl_typesupport_fastrtps_cpp.hpp  activate__rosidl_typesupport_introspection_cpp.hpp  activate__struct.h  activate__type_support.h  at_goal__builder.hpp  at_goal__rosidl_typesupport_fastrtps_c.h  at_goal__rosidl_typesupport_introspection_cpp.hpp  at_goal__struct.hpp  at_goal__type_support.c  at_goal__type_support.cpp  deactivate__builder.hpp  deactivate__functions.c  deactivate__functions.h  deactivate__rosidl_typesupport_fastrtps_c.h  deactivate__rosidl_typesupport_introspection_cpp.hpp  deactivate__struct.hpp  deactivate__traits.hpp  get_goal__rosidl_typesupport_introspection_c.h  get_goal__rosidl_typesupport_introspection_cpp.hpp  get_goal__traits.hpp  get_goal__type_support.c
install/irob_interfaces/lib/: libirob_interfaces__rosidl_generator_c.dylib  libirob_interfaces__rosidl_generator_py.dylib  libirob_interfaces__rosidl_typesupport_c.dylib  libirob_interfaces__rosidl_typesupport_fastrtps_c.dylib  libirob_interfaces__rosidl_typesupport_fastrtps_cpp.dylib  libirob_interfaces__rosidl_typesupport_introspection_c.dylib
install/irob_interfaces/share/irob_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/irob_interfaces/share/irob_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_irob_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_irob_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_irob_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  irob_interfaces__rosidl_typesupport_cExport-noconfig.cmake  irob_interfaces__rosidl_typesupport_cExport.cmake  irob_interfaces__rosidl_typesupport_cppExport.cmake  irob_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/irob_interfaces/share/irob_interfaces/hook/: dyld_library_path.ps1
install/irob_interfaces/share/irob_interfaces/srv/: Activate.idl  Deactivate.idl  GetGoal.idl  GetGoal_Response.msg
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.sh  package.sh
install/turtlebot3_fake_node/share/turtlebot3_fake_node/cmake/: ament_cmake_export_dependencies-extras.cmake
install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: turtlebot3_drive
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: package.sh
install/turtlebot3_manipulation_gazebo/share/turtlebot3_manipulation_gazebo/: package.ps1  package.sh
install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.sh  package.sh
log/: latest_build
src/irob_assignment_1/: CMakeLists.txt  README.md  setup.cfg  setup.py
src/irob_assignment_1/irob_assignment_1/: explorer.py
src/irob_assignment_1/launch/: slam.launch.py  start.launch.py  start_navigation.launch.py
src/irob_assignment_1/rviz/: view.rviz
src/irob_assignment_1/urdf/: burger_ros2.urdf
src/irob_assignment_5/: CMakeLists.txt  setup.cfg  setup.py
src/irob_assignment_5/config/: goal_params_BT.yaml  goal_params_BT_level_A.yaml
src/irob_assignment_5/irob_assignment_5/: BT_students.py  SM_students.py
src/irob_assignment_5/launch/: slam.launch.py  start_navigation.launch.py
src/irob_assignment_5/rviz/: view.rviz
src/irob_assignment_5/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
src/irob_interfaces/: CMakeLists.txt
src/irob_interfaces/srv/: AtGoal.srv  Deactivate.srv
